--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   firebase_storage: ^5.0.1
   intl: ^0.16.1
   timeago: ^2.0.29
+  shimmer: ^2.0.0
 
 dev_dependencies:
   flutter_test:
